data/derived/comb/progs/unify/prog6994.ml.out
Characters 175-176:
  in (x, isFPoint x)
                  ^
Error: This expression has type int -> int
       but an expression was expected of type int
